src/objects/HardBrakeEvent__c.object
<CustomObject>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HardBrakeEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>HardBrakeEvents</relationshipLabel>
        <relationshipName>HardBrakeEvents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>g_force__c</fullName>
        <label>g_force</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>HardBrakeEvent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>g_force__c</columns>
        <columns>Driver__c</columns>
        <columns>Vehicle__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HBE{0}</displayFormat>
        <label>HardBrakeEvent</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HardBrakeEvents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>